tests/negative/semantic/clone_variable_forbidden/input.ci
structure Point {
    int x = 0;
}
void main() {
    Point p = clone Point;
    Point q = clone p;
}
